--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,16 +9,36 @@ on:
         default: "hello-world"
 
 jobs:
+  preflight:
+    name: Preflight (show inputs)
+    runs-on: ubuntu-latest
+    steps:
+      - name: Show deployment details in logs
+        run: |
+          echo "🔹 Triggered by: $GITHUB_ACTOR"
+          echo "🔹 Input test_input: ${{ inputs.test_input }}"
+          echo "🔹 Commit SHA: $GITHUB_SHA"
+          echo "🔹 Repo: $GITHUB_REPOSITORY"
+
+      - name: Write inputs to job summary
+        run: |
+          {
+            echo "## 🚦 Deployment Preflight";
+            echo "";
+            echo "- **Triggered by:** $GITHUB_ACTOR";
+            echo "- **Input \`test_input\`:** \`${{ inputs.test_input }}\`";
+            echo "- **Commit SHA:** \`$GITHUB_SHA\`";
+            echo "- **Repo:** \`$GITHUB_REPOSITORY\`";
+          } >> "$GITHUB_STEP_SUMMARY"
+
   deploy:
     name: Fake Deploy Job
     runs-on: ubuntu-latest
+    needs: preflight
+    # 👇 Environment gate happens here, after you can view preflight output
     environment:
       name: production
     steps:
-      - name: Print the input
-        run: |
-          echo "User entered: ${{ inputs.test_input }}"
-
       - name: Simulate deployment
         run: |
           echo "Starting fake deployment..."
